--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "vite build --watch --mode development",
-    "build": "vite build",
+    "build": "vite build && npm run copy-dist",
+    "copy-dist": "node scripts/copy-dist.js",
     "make-link": "node scripts/make_dev_link.cjs",
     "test": "vitest",
     "test:once": "vitest run",
@@ -38,6 +39,7 @@
     "flatpickr": "^4.6.13",
     "jsdom": "^25.0.0",
     "minimatch": "^10.0.0",
+    "path-browserify": "^1.0.1",
     "rollup-plugin-livereload": "^2.0.5",
     "sass": "^1.77.0",
     "siyuan": "^0.9.0",
